View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033631 | Open CASCADE | OCCT:Data Exchange | public | 2024-03-04 21:07 | 2024-03-18 03:25 |
Reporter | dpasukhi | Assigned To | vglukhik | ||
Priority | normal | Severity | crash | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.8.1 | ||||
Summary | 0033631: Data Exchange, Step import - Crash by reading STEP file | ||||
Description | OCCT 7.8.0 fails to read a STEP file (STEPControl_Reader works, STEPCAFControl_Reader doesn't) | ||||
Additional information and documentation updates | https://dev.opencascade.org/content/occt-780-fails-read-step-file-stepcontrolreader-works-stepcafcontrolreader-doesnt#comment-25609 | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Check Model Complete Check List : F:VOLUME_UNIT: Parameter n0.1 (dimensions) not an Entity - Nb: 1 : 6686:#6692 Check Model Complete Check List : F:AREA_UNIT: Parameter n0.1 (dimensions) not an Entity - Nb: 1 : 6689:#6695 Check Model Complete Check List : F:INVISIBILITY: Parameter n0.1 (invisible_items) : Entity has illegal type - Nb: 23 : 9049:#9055 9085:#9091 9140:#9146 9241:#9247 9277:#9283 9320:#9326 9353:#9359 9386:#9392 9431:#9437 9482:#9488 10355:#10361 10395:#10401 10440:#10446 10470:#10476 10512:#10518 10574:#10580 10664:#10670 10722:#10728 10759:#10765 10821:#10827 10895:#10901 11343:#11349 11385:#11391 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.17292, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9245:#9251 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.20167, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9288:#9294 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.23042, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9331:#9337 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.26229, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9364:#9370 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.29416, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9397:#9403 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.31762, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9448:#9454 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.34108, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9499:#9505 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.37444, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9524:0009530 Check Model Complete Check List : F:COMPOUND_REPRESENTATION_ITEM: Parameter n0.1 (representation_item) not an Entity - Nb: 1 : 9559:#9565 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.39976, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9560:#9566 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.43713, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9606:#9612 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.46587, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9672:#9678 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.50552, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9714:#9720 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.53572, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9780:#9786 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.56222, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9834:#9840 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.59558, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9880:#9886 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.61455, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 9913:#9919 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.64097, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 10067:#10073 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.66485, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 10122:#10128 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.68510, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 10188:#10194 Check Model Complete Check List : W:(LENGTH_MEASURE_WITH_UNIT,MEASURE_REPRESENTATION_ITEM,MEASURE_WITH_UNIT,REPRESENTATION_ITEM): Complex Record n0.70787, member type MEASURE_WITH_UNIT not in alphabetic order - Nb: 1 : 10260:#10266 Check Model Complete Check List : W:(CHARACTERIZED_OBJECT,CHARACTERIZED_REPRESENTATION,DRAUGHTING_MODEL,REPRESENTATION): Complex Record n0.191782, member type REPRESENTATION not in alphabetic order - Nb: 1 : 11568:#11574 Check Model Complete Check List : F:PROPERTY_DEFINITION: Parameter n0.3 (definition) : Entity has illegal type - Nb: 3 : 11571:#11577 11591:#11597 11611:#11617 Check Model Complete Check List : W:(CHARACTERIZED_OBJECT,CHARACTERIZED_REPRESENTATION,DRAUGHTING_MODEL,REPRESENTATION): Complex Record n0.191814, member type REPRESENTATION not in alphabetic order - Nb: 1 : 11588:#11594 Check Model Complete Check List : W:(CHARACTERIZED_OBJECT,CHARACTERIZED_REPRESENTATION,DRAUGHTING_MODEL,REPRESENTATION): Complex Record n0.191846, member type REPRESENTATION not in alphabetic order - Nb: 1 : 11608:#11614 Nb Total:52 for 28 items |
|
stc_06-k5-242.zip (853,715 bytes) |
|
Branch CR33631 has been created by ichesnokova. SHA-1: c2325f2f0d73b80a3f02ec0bf422b3f1b9af5ede Detailed log of new commits: Author: ichesnok Date: Fri Mar 8 13:38:18 2024 +0000 0033631: Data Exchange, Step import - Crash by reading STEP file Creating Poly_Triangulation from ComplexTriangulatedSurfaceSet was fixed. |
|
Branch CR33631 has been updated forcibly by ichesnokova. SHA-1: 0f6f5b64d321a988399567f6b901bef385cc8d41 |
|
Dear ika, please review branch CR33631. Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR33631-master-ichesnok/view/COMPARE/ |
|
No remarks. Dear bugmaster, please integrate OCCT: CR33631. |
|
Combination - OCCT branch : IR-2024-03-15 master SHA - 9d93d9b9b888f8754ea5fa83cd2bbcfb1111bca6 d2ef868da4165400c82322bd7f11b652decce47a Products branch : master SHA - 4019cd9a039aa9bb8252b865410207f8d4cf3eb4 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18392.76999999986 / 18052.86999999987 [+1.88%] Products Total CPU difference: 11191.209999999957 / 11393.919999999946 [-1.78%] Windows-64-VC142: OCCT Total CPU difference: 20708.453125 / 20444.125 [+1.29%] Products Total CPU difference: 12623.671875 / 12572.140625 [+0.41%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33631 has been deleted by vglukhik. SHA-1: 0f6f5b64d321a988399567f6b901bef385cc8d41 |
occt: master d5bcd333 2024-03-08 13:38:18 ichesnok Committer: vglukhik Details Diff |
0033631: Data Exchange, Step import - Crash by reading STEP file Creating Poly_Triangulation from ComplexTriangulatedSurfaceSet was fixed. |
Affected Issues 0033631 |
|
mod - src/STEPCAFControl/STEPCAFControl_Reader.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2024-03-04 21:07 | dpasukhi | New Issue | |
2024-03-04 21:07 | dpasukhi | Assigned To | => ichesnokova |
2024-03-04 21:20 | dpasukhi | Note Added: 0115227 | |
2024-03-04 21:21 | dpasukhi | Note Added: 0115228 | |
2024-03-04 21:21 | dpasukhi | File Added: stc_06-k5-242.zip | |
2024-03-08 18:44 | git | Note Added: 0115290 | |
2024-03-13 15:38 | git | Note Added: 0115349 | |
2024-03-13 19:03 |
|
Assigned To | ichesnokova => ika |
2024-03-13 19:03 |
|
Status | new => resolved |
2024-03-13 19:03 |
|
Note Added: 0115351 | |
2024-03-14 15:46 | ika | Assigned To | ika => bugmaster |
2024-03-14 15:46 | ika | Status | resolved => reviewed |
2024-03-14 15:46 | ika | Note Added: 0115364 | |
2024-03-18 03:15 | vglukhik | Note Added: 0115387 | |
2024-03-18 03:19 | vglukhik | Changeset attached | => occt master d5bcd333 |
2024-03-18 03:19 | vglukhik | Assigned To | bugmaster => vglukhik |
2024-03-18 03:19 | vglukhik | Status | reviewed => verified |
2024-03-18 03:19 | vglukhik | Resolution | open => fixed |
2024-03-18 03:25 | git | Note Added: 0115398 |