0033631: Data Exchange, Step import - Crash by reading STEP file

Creating Poly_Triangulation from ComplexTriangulatedSurfaceSet was fixed.